css fixes, displaying chatops button visibility fix

--- a/grafana-plugin/src/pages/incident/Incident.module.scss
+++ b/grafana-plugin/src/pages/incident/Incident.module.scss
@@ -31,6 +31,7 @@
 
 .message {
   margin-top: 16px;
+  word-wrap: break-word;
 }
 
 .message a {
